--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <!-- js mug bg -->
-        <img id="main-bg" src="/images/js-mug.jpg" alt="javascript mug">
+        <img id="main-bg" src="images/js-mug.jpg" alt="javascript mug">
 
         <!-- notifications container -->
         <div class="notification-bars"></div>
